--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <section class="home">
     <div class="home-content">
       <h3>Hello</h3>
-
+      <h3>Hello</h3>
       <h1>I'm <span>Shriya Chauhan</span> a Computer 
         Science Student</h1>
       <p>I'm a B.Tech
