--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <section class="home">
     <div class="home-content">
       <h3>Hello</h3>
-      <h3>Hello</h3>
+      
       <h1>I'm <span>Shriya Chauhan</span> a Computer 
         Science Student</h1>
       <p>I'm a B.Tech
@@ -82,6 +82,40 @@
       </div>
     </div>
   </section>
+
+  <section id="skills">
+    <h2>Skills</h2>
+    <div class="skills-container">
+      <div class="skill-category">
+        <h3>Programming Languages</h3>
+        <ul>
+          <li>Java</li>
+          <li>C</li>
+          <li>Python</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+        </ul>
+      </div>
+  
+  
+      <div class="skill-category">
+        <h3>Databases</h3>
+        <ul>
+          <li>MySQL</li>
+          </ul>
+  
+      <div class="skill-category">
+        <h3>Tools & Platforms</h3>
+        <ul>
+          <li>Git & GitHub</li>
+          <li>XAMPP</li>
+          <li>VS Code</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  
 
   <section id="contact me">
    <div class="contact-form">
